tests/miniJava/neg/000125_mutation.MiniJava
class java { public 0 void Main ( String [ ] java ) { { } } }
